--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@ HELP.md
 !**/src/test/**/build/
 src/main/resources/application-development.properties
 src/main/resources/application-prod.properties
+.gradle/
+build
 
 ### STS ###
 .apt_generated
